Some test edits.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Jeffam-test.GitHub.io by jeffam-test</title>
+    <title>A Test Page</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -15,12 +15,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Jeffam-test.GitHub.io</h1>
-        <p>Test Jekyll Site</p>
-
-
-        <p class="view"><a href="https://github.com/jeffam-test">View My GitHub Profile</a></p>
-
+        <h1>Test!</h1>
+        <p>Test Jekyll Site, or something</p>
       </header>
       <section>
         <h3>
